Kyverno/hostpath-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-test
spec:
  containers:
  - name: nginx
    image: nginx:1.31

    volumeMounts:
    - name: host-volume
      mountPath: /host

  volumes:
  - name: host-volume
    hostPath:
      path: /
      type: Directory
