Kyverno/latest_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  containers:
    - name: nginx
      image: nginx:1.29
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
