Kyverno/passhostpath-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-safe-host-pass
spec:
  containers:
    - name: nginx
      image: nginx:1.31

      volumeMounts:
        - name: cache
          mountPath: /cache

  volumes:
    - name: cache
      emptyDir: {}
