Kyverno/vinay.yaml
apiVersion: v1
kind: Pod
metadata:
  name: binay
spec:
  containers:
    - name: nginx
      image: nginx:latest
